Registration toggle buttons done

--- a/FrontEnd/src/Pages/AuthPage.css
+++ b/FrontEnd/src/Pages/AuthPage.css
@@ -10,11 +10,8 @@
 }
 
 .registrationToggle button{
-    padding: 10px;
-    background-color: aqua;
-}
-
-.SignIn{
+    font-family: "Roboto";
+    font-weight: 400;
 }
 
 
