--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -16,3 +16,22 @@ html , body {
 .app-container{
   height: 100%;
 }
+
+.loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  z-index: 50;
+  opacity: 1;
+  transition: opacity 3s ease-in-out; 
+}
+
+.loading-screen.hidden {
+  opacity: 0; 
+}
