--- a/FrontEnd/src/Components/AppPage/NavBar.css
+++ b/FrontEnd/src/Components/AppPage/NavBar.css
@@ -4,14 +4,14 @@
   left: 0;              
   width: 100%;          
   height: 70px;         
-  background-color: #09193c; 
+  background-color: rgb(16, 26, 45);
   color: white;         
   display: flex;        
   justify-content: space-between;  
   align-items: center;      
   padding: 0 20px;    
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.6); 
-  z-index: 10;         
+  border-bottom: 0.01px solid rgba(255, 255, 255, 0.175) ; 
+  z-index: 5;         
 }
 
 .menuIcon{
@@ -22,4 +22,13 @@
 .menuIcon:hover{
     cursor: pointer;
     opacity: 0.8;
+}
+
+.accountIcon{
+  font-size: 28px;
+}
+
+.username{
+  font-family: "Poppins";
+  font-size: 13px;
 }
