--- a/FrontEnd/src/Pages/AppPage/AppPage.css
+++ b/FrontEnd/src/Pages/AppPage/AppPage.css
@@ -2,15 +2,14 @@
 .appPagesContainer {
   height: 100vh;          
   display: flex;
-  flex-direction: column;
   padding-top: 56px;      
 }
 
 .appPagesContentContainer {
   flex: 1;                
   overflow-y: auto;       
-  background-color: rgb(255, 255, 255);  
-  margin-top: 30px;
+  background-color: rgba(25, 25, 25, 0); 
   border-radius: 12px;
-  padding: 20px;
+  padding: 15px;
+  margin-top: 20px;
 }
