--- a/FrontEnd/src/Components/AppPage/NavBar.css
+++ b/FrontEnd/src/Components/AppPage/NavBar.css
@@ -29,6 +29,9 @@
 }
 
 .username{
-  font-family: "Poppins";
+  font-family: "Inter";
   font-size: 13px;
+  font-weight: 400;
+  color: rgb(207, 207, 207);
+  margin-top: 3px;
 }
