--- a/FrontEnd/src/Components/AppPage/NavBar.css
+++ b/FrontEnd/src/Components/AppPage/NavBar.css
@@ -12,6 +12,7 @@
   padding: 0 20px;    
   border-bottom: 0.01px solid rgba(255, 255, 255, 0.175) ; 
   z-index: 5;         
+  box-shadow: 0px 1px 2px black ;
 }
 
 .menuIcon{
