--- a/FrontEnd/src/Pages/AppPage/AppPage.css
+++ b/FrontEnd/src/Pages/AppPage/AppPage.css
@@ -30,12 +30,30 @@
 .closeIcon{
   color: white;
   font-size: 20px;
-  position: absolute;
-  left: 5%;
-  top: 1%;
+  
 }
 
 .closeIcon:hover{
   cursor: pointer;
   opacity: 0.7;
+}
+
+.barSelector{
+    font-family: "Inter";
+    font-weight: 200;
+    color: rgb(219, 219, 219);
+    font-size: 14px;
+    padding: 10px;
+}
+
+.barSelector button:hover{
+    cursor: pointer;
+    color: white;
+    transform: translateY(-1px);
+    transition: all 0.3s ease-in-out;
+}
+
+.barSelector button:active{
+    color: rgb(219, 219, 219);
+    transition: all 0.1s ease-in-out;
 }
