Upgrade both sidebars

--- a/FrontEnd/src/Components/AppPage/Sidebar.css
+++ b/FrontEnd/src/Components/AppPage/Sidebar.css
@@ -20,11 +20,22 @@
 .barSelector:hover{
     cursor: pointer;
     color: white;
-    transform: translateY(-1px);
     transition: all 0.3s ease-in-out;
 }
 
 .barSelector button:active{
     color: rgb(219, 219, 219);
     transition: all 0.1s ease-in-out;
+}
+
+.selectedDiv{
+    background-color: #ffbd59;
+    transform: translateY(-2px);
+    color: black;
+    font-family: "Inter";
+    font-weight: 200;
+    font-size: 14px;
+    padding: 10px;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
 }
