--- a/FrontEnd/src/Pages/HomePage/HomePage.css
+++ b/FrontEnd/src/Pages/HomePage/HomePage.css
@@ -1,5 +1,5 @@
 .content-container{
-    background-color: #fffffff3;
+    background-color: white;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.469);
 }
 
