--- a/FrontEnd/src/Components/HomePage/Workouts/CreateWorkout.css
+++ b/FrontEnd/src/Components/HomePage/Workouts/CreateWorkout.css
@@ -37,3 +37,17 @@
     font-family: "Poppins";
     font-weight: 500;
 }
+
+.exerciseSliderList{
+    font-family: "Poppins";
+}
+
+.sendWorkoutForCreation{
+    background-color: rgb(8, 23, 63);
+    color: white;
+}
+
+.sendWorkoutForCreation:hover{
+    opacity: 0.5;
+    transition: all 0.2s ease-in-out;
+}
